# specitems

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: commitlint.yml  pr-comment.yml  publish-pypi.yml  publish-testpypi.yml  python-package-freebsd.yml  python-package.yml
docs/source/: conf.py  index.rst  items.rst  specitems.rst
spec-types/spec/: action-subprocess-env-list.yml  action-subprocess-env.yml  action-subprocess-list.yml  action-subprocess.yml  citation-member-role.yml  enabled-by.yml  enabled-set-action-list.yml  enabled-set-action.yml  enabled-set-actions.yml  glossary-group.yml  glossary-refinement.yml  glossary-role.yml  glossary-term.yml  list-float.yml  list-int.yml  list-list-str.yml  md5-hex.yml  md5.yml  month.yml  myst.yml  optional-int-or-str.yml  optional-list-int-or-str.yml  optional-list-list-str.yml  optional-list-str.yml  optional-md5-hex.yml  optional-md5.yml  optional-sha256-hex.yml  optional-sha256.yml  optional-sha512-hex.yml  optional-sha512.yml  optional-str-or-list-str.yml  proxy-member.yml  proxy.yml  reference-article.yml  reference-book.yml  reference-booklet.yml  reference-inbook.yml  reference-incollection.yml  reference-inproceedings.yml  reference-manual.yml  (+22 more)
src/specitems/: __init__.py  cite.py  clangformat.py  clihash.py  clipickle.py  clispecdoc.py  cliutil.py  cliverify.py  cliyamlquery.py  content.py  contentcommonmark.py  contentmarkdown.py  contentsphinx.py  contenttext.py  getvaluesubprocess.py  glossary.py  hashutil.py  itemmapper.py  items.py  spec.pickle  specdoc.py  specformatter.py  specverify.py  subprocessaction.py
tests/: test_cite.py  test_clangformat.py  test_clihash.py  test_clipickle.py  test_clispecdoc.py  test_cliutil.py  test_cliyamlquery.py  test_content.py  test_content_commonmark.py  test_content_copyrights.py  test_content_markdown.py  test_content_sphinx.py  test_getvaluesubprocess.py  test_glossary.py  test_hashutil.py  test_itemmapper.py  test_items_item.py  test_items_itemcache.py  test_specdoc.py  test_specformatter.py  test_specverify.py  test_subprocessaction.py  util.py
tests/spec-doc/: a.yml  name.yml  other.yml
tests/spec-item-cache/: c.yml  p.yml  proxy-member-default.yml  proxy3.yml  q.yml  s.yml
tests/spec-item-cache-2/: a.yml  x.yml
tests/spec-sphinx/: gs.yml  (+1 more)
(+25 files in other folders)
