# SPDX-License-Identifier: BSD-2-Clause

# Copyright (C) 2026 embedded brains GmbH & Co. KG

[project]
name = "specitems"
version = "1.1.10"
description = "Provides interfaces to work with specification items."
authors = [
    {name = "The specitems Authors", email = "specthings@embedded-brains.de"}
]
license = "BSD-2-Clause"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mdformat>=0.7.22",
    "mdformat-deflist>=0.1.3",
    "mdformat-footnote>=0.1.3",
    "mdformat-frontmatter>=2.0.10",
    "mdformat-myst>=0.3.0",
    "mdformat-tables>=1.0.0",
    "pyyaml>=6.0.3",
]
keywords = [
  "certification",
  "documentation",
  "markdown",
  "qualification",
  "requirements-management",
  "traceability",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]

[project.urls]
"Source Code" = "https://github.com/specthings/specitems"
"Bug Tracker" = "https://github.com/specthings/specitems/issues"

[project.scripts]
specpickle = "specitems.clipickle:clipickle"
specdocitems = "specitems.clispecdoc:clispecdocitems"
spechash = "specitems.clihash:clihash"
specyamlquery = "specitems.cliyamlquery:cliyamlquery"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.3",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "sphinx>=9.0.4",
    "sphinx-autodoc-napoleon-typehints>=2.1.6",
    "sphinx-autodoc-typehints>=3.6.1",
    "sphinx-rtd-theme>=3.1.0",
    "types-pyyaml>=6.0.12.20250915",
    "yapf>=0.43.0",
]

[tool.pytest.ini_options]
addopts = "--cov=specitems --cov-fail-under=100 --cov-branch --cov-report=term-missing"
